[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/key_remapping/KeyRemapping.gd" type="Script" id=1]
[ext_resource path="res://scenes/key_remapping/ActionListItem.tscn" type="PackedScene" id=2]
[ext_resource path="res://default_theme.tres" type="Theme" id=3]

[node name="KeyRemapping" type="PopupPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -83.0
margin_top = -232.0
margin_right = 77.0
margin_bottom = -28.0
theme = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_right = 185.0
margin_bottom = 244.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="HBoxContainer" parent="VBoxContainer2"]
margin_right = 197.0
margin_bottom = 28.0

[node name="Label" type="Label" parent="VBoxContainer2/Title"]
margin_top = 3.0
margin_right = 134.0
margin_bottom = 25.0
size_flags_horizontal = 3
text = "Change keymap"

[node name="Reset" type="Button" parent="VBoxContainer2/Title"]
margin_left = 142.0
margin_right = 197.0
margin_bottom = 28.0
text = "Reset"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer2"]
margin_top = 36.0
margin_right = 197.0
margin_bottom = 40.0

[node name="ActionList" type="VBoxContainer" parent="VBoxContainer2"]
margin_top = 48.0
margin_right = 197.0
margin_bottom = 256.0
size_flags_horizontal = 3

[node name="Jump" parent="VBoxContainer2/ActionList" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 197.0
margin_bottom = 28.0
text = "Jump"
action = "jump"

[node name="SwarmCam" parent="VBoxContainer2/ActionList" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 36.0
margin_right = 197.0
margin_bottom = 64.0
text = "Toggle Swarm Camera"
action = "toggle_swarm_cam"

[node name="SwarmAction1" parent="VBoxContainer2/ActionList" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 72.0
margin_right = 197.0
margin_bottom = 100.0
text = "Swarm Action 1"
action = "swarm_action_1"

[node name="SwarmAction2" parent="VBoxContainer2/ActionList" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 108.0
margin_right = 197.0
margin_bottom = 136.0
text = "Swarm Action 2"
action = "swarm_action_2"

[node name="SwarmAction3" parent="VBoxContainer2/ActionList" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 144.0
margin_right = 197.0
margin_bottom = 172.0
text = "Swarm Action 3"
action = "swarm_action_3"

[node name="SwarmAction4" parent="VBoxContainer2/ActionList" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 180.0
margin_right = 197.0
margin_bottom = 208.0
text = "Swarm Action 4"
action = "swarm_action_4"

[node name="Close" type="Button" parent="VBoxContainer2"]
margin_top = 264.0
margin_right = 197.0
margin_bottom = 292.0
text = "Close"

[connection signal="mouse_entered" from="VBoxContainer2/Title/Reset" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer2/Title/Reset" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer2/Title/Reset" to="." method="_on_Reset_pressed"]
[connection signal="mouse_entered" from="VBoxContainer2/Close" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer2/Close" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer2/Close" to="." method="_on_Close_pressed"]
